k8s/garage/traefik-auth-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: middleware-auth-garage
  namespace: garage
spec:
  basicAuth:
    secret: traefik-auth-secret-garage
