k8s/garage/infra.yaml
---
# Source: garage/templates/secret.yaml

---
# Source: garage/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: garage
  namespace: garage
  labels:
    helm.sh/chart: garage-0.9.2
    app.kubernetes.io/name: garage
    app.kubernetes.io/instance: garage
    app.kubernetes.io/version: "v2.2.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 3900
      targetPort: 3900
      protocol: TCP
      name: s3-api
    - port: 3902
      targetPort: 3902
      protocol: TCP
      name: s3-web
  selector:
    app.kubernetes.io/name: garage
    app.kubernetes.io/instance: garage
---
# Source: garage/templates/workload.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: garage
  namespace: garage
  labels:
    helm.sh/chart: garage-0.9.2
    app.kubernetes.io/name: garage
    app.kubernetes.io/instance: garage
    app.kubernetes.io/version: "v2.2.0"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: garage
      app.kubernetes.io/instance: garage
  template:
    metadata:
      annotations:
        checksum/config: d0eb3c4a38fc90b8ec14384fff35d2d4874cab7b6e4bf92f0e4f7c50b20084d3
      labels:
        helm.sh/chart: garage-0.9.2
        app.kubernetes.io/name: garage
        app.kubernetes.io/instance: garage
        app.kubernetes.io/version: "v2.2.0"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: garage
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: garage
          securityContext:
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsUser: 1000
            runAsGroup: 1000
          image: "dxflrs/amd64_garage:v2.2.0"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3900
              name: s3-api
            - containerPort: 3902
              name: web-api
            - containerPort: 3903
              name: admin
          volumeMounts:
            - name: meta
              mountPath: /mnt/meta
            - name: data
              mountPath: /mnt/data
            - name: etc
              mountPath: /etc/garage.toml
              subPath: garage.toml
          resources:
            {}
      volumes:
        - name: configmap
          configMap:
            name: garage-config
        - name: etc
          emptyDir: {}
        - name: meta
          hostPath:
            path: /var/lib/garage/meta
            type: DirectoryOrCreate
        - name: data
          hostPath:
            path: /mnt/tank-garage
            type: DirectoryOrCreate
